[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/obstacles/axe.png" type="Texture" id=1]
[ext_resource path="res://script/hazards/axe.gd" type="Script" id=2]
[ext_resource path="res://scenes/hazards/particles/TelegraphBurst.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 115 )

[node name="Axe" type="Area2D" groups=["hazards"]]
script = ExtResource( 2 )

[node name="BackgroundSprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 0.203922 )
position = Vector2( 0, -89 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 39.88, 1, 1, 1 )
position = Vector2( 0, -89 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HitboxHandle" type="CollisionShape2D" parent="."]
position = Vector2( 0, -114 )
shape = SubResource( 1 )
disabled = true

[node name="HitboxHead" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -144 )
polygon = PoolVector2Array( 39, -145, 51, -140, 63, -131, 77, -116, 85, -104, 93, -83, 96, -54, 93, -32, 88, -20, 75, 2, 57, 19, 40, 29, 46, 5, 38, -18, 19, -36, -10, -37, -36, -22, -44, 5, -39, 29, -48, 25, -61, 16, -69, 8, -77, -1, -86, -16, -94, -37, -96, -58, -94, -80, -89, -95, -75, -119, -59, -135, -39, -145, -44, -130, -44, -120, -42, -108, -38, -99, -28, -89, -20, -83, -10, -80, 10, -79, 20, -83, 29, -89, 37, -98, 42, -107, 44, -122, 43, -133 )
disabled = true

[node name="TelegraphParticleBurst" parent="." instance=ExtResource( 3 )]
emitting = false
one_shot = true
